--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ requests = "^2.32.3"
 langchain = ">=0.2"
 langchain-community = ">=0.2"
 langchain-cli = "*"
+polyglot = "*"
+pyicu = "*"
+pycld2 = "*"
 
 [build-system]
 requires = ["poetry-core"]
